Fix text alignment in combobox in live edit

--- a/modules/wem-webapp/src/main/webapp/admin/live-edit/styles/less/partials/empty-component.less
+++ b/modules/wem-webapp/src/main/webapp/admin/live-edit/styles/less/partials/empty-component.less
@@ -94,6 +94,7 @@
     margin: @defaultHeight/2-30px auto 0 auto;
     vertical-align: middle;
     display: inline-block;
+    text-align: left;
     width: 255px;
     .options-container {
       z-index: 9999999; // must override shader
